After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 767707 - Error: node does not match signature with signature null
Error: node does not match signature with signature null
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
2.54.x
Other Linux
: Normal blocker
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2016-06-16 00:16 UTC by Victor Aurélio
Modified: 2016-06-16 12:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Example XML (505 bytes, text/xml)
2016-06-16 00:16 UTC, Victor Aurélio
Details

Description Victor Aurélio 2016-06-16 00:16:07 UTC
Created attachment 329880 [details]
Example XML

I'm getting this error while parsing the simple XML attached.

<double> node does not match signature

But I'm not passing signature to call (i.e. passing null in signature argument)

The call:
Variant resp = Soup.XMLRPC.parse_response((string) msg.response_body.flatten().data, -1, null);

the "msg.response_body.flatten().data" is the attached xml.
Comment 1 Dan Winship 2016-06-16 12:15:45 UTC
Fixed in git master. Unfortunately there's no workaround (other than
using the old ugly XMLRPC API, or not using a double).

Also unfortunately, there is not currently another release scheduled
in the stable series before the next major GNOME release in the fall.