Fix parsing of <double> in new XMLRPC code

The new XMLRPC code didn't parse <double>s correctly, which we didn't
notice because the test cases don't test <double> either. So fix the
code and the tests.

https://bugzilla.gnome.org/show_bug.cgi?id=767707